--- a/home/toc.html
+++ b/home/toc.html
@@ -126,14 +126,14 @@
             </li>
             <li>
               <span class="expand-stub"></span>
-              <a>Video Tutorials</a>
+              <a>Tutorials</a>
                 
                 <ul class="nav level2">
                   <li>
-                    <a href="jenkins-build-video.html" name="" title="Jenkins Build Demo">Jenkins Build Demo</a>
+                    <a href="jenkins-build-video.html" name="" title="Jenkins Build">Jenkins Build</a>
                   </li>
                   <li>
-                    <a href="create-dev-env-video.html" name="" title="Create and Manage Dev Enviroment Demo">Create and Manage Dev Enviroment Demo</a>
+                    <a href="create-dev-env-video.html" name="" title="Create and Manage Dev Enviroment">Create and Manage Dev Enviroment</a>
                   </li>
                 </ul>  </li>
           </ul>      </div>
