--- a/home/temenos-cloud-templates.html
+++ b/home/temenos-cloud-templates.html
@@ -80,9 +80,11 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" language="javascript" src="scripts/getTemplates.js"></script>
-<script type="text/javascript" language="javascript" src="scripts/functionToTriggerOnSelect.js"></script></p>
+<script type="text/javascript" language="javascript" src="scripts/getTemplateDetails.js"></script>
+<script type="text/javascript" language="javascript" src="scripts/js-yaml.min.js"></script>
+
 <h2 id="how-temenos-cloud-templates-work"><strong>How Temenos Cloud Templates Work?</strong></h2>
 <p>The Temenos PaaS platform has the capability to provision environments in a variety of different configurations. This capability is driven through the concept of &#39;Templates&#39; - a simplified view of the constituent elements which make up a sandbox configuration, including:</p>
 <ul>
@@ -94,9 +96,9 @@
 <p><img src="images/sandbox-templates.png" alt=""></p>
 <p>By default, new Templates are added with each monthly release of T24. These Templates follow a standard pattern, configuration and technology stack, but with the most recent releases of T24 being deployed.</p>
 <p>However, the Temenos Development platform team also offer the ability to create customised Templates for clients. For more information, please contact <strong>CloudPlatformSupport@temenos.com</strong>.</p>
-<p>Furthermore, please find below the current templates catalogue. The standard configuration of each template can be explored by selecting the required template from the list.
-<div class="form-group"><select class="form-control" id="templateSelectionId" onchange="functionToTriggerOnSelect(this.value)"><option value="" disabled="" selected="">Select a template</select></div>
-<div id="appendTemplate"></div></p>
+<p>Furthermore, please find below the current templates catalogue. The standard configuration of each template can be explored by clicking the required template from the list.</p>
+<ul id="templatesList" class="list-unstyled">
+</ul>
 <p><br></p>
               <hr>
               
