--- a/home/toc.html
+++ b/home/toc.html
@@ -117,6 +117,9 @@
                   <li>
                     <a href="techguides/jenkins-build-promote-pipelines.html" name="" title="Use Jenkins to Build Pipelines">Use Jenkins to Build Pipelines</a>
                   </li>
+                  <li>
+                    <a href="techguides/fcm-configuration.html" name="" title="FCM Configuration">FCM Configuration</a>
+                  </li>
                 </ul>  </li>
             <li>
               <a href="techguides/troubleshooting.html" name="" title="Troubleshooting">Troubleshooting</a>
