--- a/home/toc.html
+++ b/home/toc.html
@@ -118,7 +118,7 @@
                     <a href="techguides/jenkins-build-promote-pipelines.html" name="" title="Use Jenkins to Build Pipelines">Use Jenkins to Build Pipelines</a>
                   </li>
                   <li>
-                    <a href="techguides/fcm-configuration.html" name="" title="FCM Configuration">FCM Configuration</a>
+                    <a href="techguides/fcm-configuration.html" name="" title="Configure and Use FCM Application">Configure and Use FCM Application</a>
                   </li>
                 </ul>  </li>
             <li>
