--- a/home/toc.html
+++ b/home/toc.html
@@ -118,6 +118,9 @@
                     <a href="techguides/jenkins-build-promote-pipelines.html" name="" title="Use Jenkins to Build Pipelines">Use Jenkins to Build Pipelines</a>
                   </li>
                   <li>
+                    <a href="techguides/access-ud-directories.html" name="" title="Access UD Directories">Access UD Directories</a>
+                  </li>
+                  <li>
                     <a href="techguides/fcm-configuration.html" name="" title="Configure and Use FCM Application">Configure and Use FCM Application</a>
                   </li>
                 </ul>  </li>
