--- a/home/techguides/access-ud-directories.html
+++ b/home/techguides/access-ud-directories.html
@@ -103,7 +103,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="./images/access-ud-new-env.png" alt="new environment"></p>
+<p><img src="images/access-ud-new-env.png" alt="new environment"></p>
 <div class="NOTE"><h5>Note</h5><p>It will take about 15 minutes for the new environment to be created</p>
 </div>
 <h2 id="create-a-user-on-the-portal">Create a User on the Portal</h2>
@@ -122,7 +122,7 @@
 <li>Upload the private key previously saved (corresponding to the public key attached to the portal user)</li>
 <li>Click <strong>OK</strong></li>
 </ul>
-<p><img src="./images/access-ud-sftp-fields.png" alt="sftp fields"></p>
+<p><img src="images/access-ud-sftp-fields.png" alt="sftp fields"></p>
 <p><br></p>
 <ul>
 <li>Previous screen pops-up, click <strong>Login</strong></li>
@@ -142,7 +142,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="./images/access-ud-schema.png" alt="access ud directories schema"></p>
+<p><img src="images/access-ud-schema.png" alt="access ud directories schema"></p>
 <p><br></p>
 <ul>
 <li>To see how you can push a message to be processed by an application, check this <a href="fcm-configuration.html#process-messages-in-the-fcm-application"><strong>FCM example</strong></a>.</li>
