--- a/home/toc.html
+++ b/home/toc.html
@@ -151,6 +151,9 @@
                     <a href="cloud-environments-customize-templates.html" name="" title="Manage Cloud Environments and Customize Templates">Manage Cloud Environments and Customize Templates</a>
                   </li>
                   <li>
+                    <a href="access-ud-directories-video.html" name="" title="Access UD Directories">Access UD Directories</a>
+                  </li>
+                  <li>
                     <a href="fcm-configuration-video.html" name="" title="FCM Cloud Configuration">FCM Cloud Configuration</a>
                   </li>
                 </ul>  </li>
