--- a/home/toc.html
+++ b/home/toc.html
@@ -154,6 +154,9 @@
                     <a href="cloud-environments-customize-templates.html" name="" title="Manage Cloud Environments and Customize Templates">Manage Cloud Environments and Customize Templates</a>
                   </li>
                   <li>
+                    <a href="clone-environment-video.html" name="" title="Clone an Environment">Clone an Environment</a>
+                  </li>
+                  <li>
                     <a href="access-ud-directories-video.html" name="" title="Access UD Directories">Access UD Directories</a>
                   </li>
                   <li>
