--- a/home/access-ud-directories-video.html
+++ b/home/access-ud-directories-video.html
@@ -82,11 +82,30 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/wqBTV76cAOQ" width="720" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe src="https://www.youtube.com/embed/wqBTV76cAOQ" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
  </body>
 </html>
 
-
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>6:24 minutes</strong>
+<br>
+<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>15 minutes</strong> the cloning of the environment)</p>
+<p><br>
+<span style="color:#005294"><strong>INFO</strong></span>:
+<br></p>
+<ul>
+<li>Create a new environment &gt; This action may take around <span style="color:#005294"><strong>15 minutes</strong></span>.
+<br></li>
+<li>Create <span style="color:#005294"><strong>a user</strong></span> on the portal.
+<br></li>
+<li>Connect via <span style="color:#005294"><strong>SFTP Client</strong></span>.
+<br></li>
+<li>Check and use the <span style="color:#005294"><strong>Live folders</strong></span>:<ul>
+<li>default </li>
+<li>log_t24</li>
+<li>standalone</li>
+</ul>
+</li>
+</ul>
 <p><br></p>
               <hr>
               
