--- a/home/add-features-to-environment-video.html
+++ b/home/add-features-to-environment-video.html
@@ -82,10 +82,27 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/K3di3QTa9vU" width="720" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe src="https://www.youtube.com/embed/K3di3QTa9vU" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
  </body>
 </html>
 
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>21:30 minutes</strong>
+<br>
+<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>10 minutes</strong> the commit &amp; push to the environment and ~ 10 minutes the deployment)</p>
+<p><br>
+<span style="color:#005294"><strong>INFO</strong></span>:
+<br>
+ -Add a  <span style="color:#005294"><strong>user</strong></span> on the portal and attach the public SSH key.
+<br></p>
+<ul>
+<li>Clone an environment in order create a <span style="color:#005294"><strong>local repository</strong></span>.
+<br></li>
+<li>Add files or packages to each related folder: <span style="color:#005294"><strong>addons, packages, plugins, updates, wsdls&lt;/span</strong>&gt; and <span style="color:#005294"><strong>client files</strong></span></span>.<ul>
+<li>Commit and push all elements to the environment repository</li>
+<li>Deploy the elements by clicking the deploy button under the repository belonging to the environment</li>
+</ul>
+</li>
+</ul>
 <p><br></p>
               <hr>
               
