--- a/home/access-ud-directories-video.html
+++ b/home/access-ud-directories-video.html
@@ -86,16 +86,16 @@
  </body>
 </html>
 
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>6:24 minutes</strong>
+<p><br></p>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>6:25 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>15 minutes</strong> the cloning of the environment)</p>
-<p><br>
-<span style="color:#005294"><strong>INFO</strong></span>:
+<p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
-<li>Create a new environment &gt; This action may take around <span style="color:#005294"><strong>15 minutes</strong></span>.
+<li><span style="color:#005294"><strong>Create</strong></span> a new environment.
 <br></li>
-<li>Create <span style="color:#005294"><strong>a user</strong></span> on the portal.
+<li>Create <span style="color:#005294"><strong>a user</strong></span> on the portal and add the public <span style="color:#005294"><strong>SSH key</strong></span>.
 <br></li>
 <li>Connect via <span style="color:#005294"><strong>SFTP Client</strong></span>.
 <br></li>
