--- a/home/add-features-to-environment-video.html
+++ b/home/add-features-to-environment-video.html
@@ -86,22 +86,21 @@
  </body>
 </html>
 
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>21:30 minutes</strong>
+<p><br></p>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>21:31 minutes</strong>
 <br>
-<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>10 minutes</strong> the commit &amp; push to the environment and ~ 10 minutes the deployment)</p>
+<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 35 minutes</strong> (from which <strong>15 minutes</strong> the creation of the environment)</p>
 <p><br>
 <span style="color:#005294"><strong>INFO</strong></span>:
-<br>
- -Add a  <span style="color:#005294"><strong>user</strong></span> on the portal and attach the public SSH key.
 <br></p>
 <ul>
-<li>Clone an environment in order create a <span style="color:#005294"><strong>local repository</strong></span>.
+<li>Add a <span style="color:#005294"><strong>user</strong></span> on the portal and attach the public <span style="color:#005294"><strong>SSH</strong></span> key.
 <br></li>
-<li>Add files or packages to each related folder: <span style="color:#005294"><strong>addons, packages, plugins, updates, wsdls&lt;/span</strong>&gt; and <span style="color:#005294"><strong>client files</strong></span></span>.<ul>
-<li>Commit and push all elements to the environment repository</li>
-<li>Deploy the elements by clicking the deploy button under the repository belonging to the environment</li>
-</ul>
-</li>
+<li><span style="color:#005294"><strong>Clone</strong></span> an environment in order create a <span style="color:#005294"><strong>local repository</strong></span>.
+<br></li>
+<li><span style="color:#005294"><strong>Add files or packages</strong></span> to each related folder: <span style="color:#005294"><strong>addons, packages, plugins, updates, wsdls</strong></span> and <span style="color:#005294"><strong>client files</strong></span>.</li>
+<li><span style="color:#005294"><strong>Commit and push</strong></span> all elements to the environment repository.</li>
+<li><span style="color:#005294"><strong>Deploy</strong></span> the elements by clicking the deploy button under the repository belonging to the environment.</li>
 </ul>
 <p><br></p>
               <hr>
