--- a/home/cloud-environments-customize-templates.html
+++ b/home/cloud-environments-customize-templates.html
@@ -82,11 +82,29 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/wEyJOtSrijI" width="720" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe src="https://www.youtube.com/embed/wEyJOtSrijI" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
  </body>
 </html>
 
-
+<p><br></p>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>22:28 minutes</strong>
+<br>
+<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 40 minutes</strong> (from which <strong>15 minutes</strong> the cloning of the environment and <strong>~ 10 minutes</strong> the rebuild action - <em>the duration depends also on the changes</em>)</p>
+<p><span style="color:#005294"><strong>INFO</strong></span>:
+<br></p>
+<p>Actions on the environment:</p>
+<ul>
+<li><span style="color:#005294"><strong>Create</strong></span> </li>
+<li><span style="color:#005294"><strong>Delete</strong></span>  </li>
+<li><span style="color:#005294"><strong>Edit</strong></span> <em>(change name and description)</em></li>
+<li><span style="color:#005294"><strong>Export</strong></span> </li>
+<li><span style="color:#005294"><strong>Boost</strong></span></li>
+<li>Create a <span style="color:#005294"><strong>user</strong></span> and attach the<span style="color:#005294"><strong>SSH key</strong></span>.</li>
+<li><span style="color:#005294"><strong>Clone</strong></span> the environment using Tortoise Git.</li>
+<li>Check the <span style="color:#005294"><strong>environments</strong></span> folder &gt; Modify the <span style="color:#005294"><strong>infratemplate.yml</strong></span> and <span style="color:#005294"><strong>main.yml</strong></span> files.</li>
+<li><span style="color:#005294"><strong>Commit and push</strong></span> the changes to the repository.</li>
+<li><span style="color:#005294"><strong>Rebuild</strong></span>. </li>
+</ul>
 <p><br></p>
               <hr>
               
