--- a/home/jenkins-build-video.html
+++ b/home/jenkins-build-video.html
@@ -82,9 +82,34 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/NKuOZJURZzg" width="720" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe src="https://www.youtube.com/embed/NKuOZJURZzg" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
  </body>
 </html>
+
+<p><br></p>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>21:54 minutes</strong>
+<br>
+<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 30 minutes</strong> (from which <strong>~ 15 minutes</strong> the creation of the environments &gt; <em>creation of the environments can be simultaneous</em>)</p>
+<p><span style="color:#005294"><strong>INFO</strong></span>:
+<br></p>
+<ul>
+<li>Create <span style="color:#005294"><strong>new environments</strong></span>:<ul>
+<li>Build environment</li>
+<li>Source environment</li>
+<li>Target environment</li>
+</ul>
+</li>
+<li>Login to <span style="color:#005294"><strong>Jenkins</strong></span> and change the password.</li>
+<li>Generate and save two pairs of public and private <span style="color:#005294"><strong>SSH keys</strong></span>.</li>
+<li>Create two <span style="color:#005294"><strong>users</strong></span> on the <span style="color:#005294"><strong>portal</strong></span> and attach the public SSH keys.
+<br></li>
+<li>Add the two <span style="color:#005294"><strong>users</strong></span> on the <span style="color:#005294"><strong>GitLab</strong></span> and attach the related private SSH keys.
+<br></li>
+<li>Add <span style="color:#005294"><strong>credentials</strong></span> in Jenkins dashboard.</li>
+<li>Configure the <span style="color:#005294"><strong>Pipeline Build</strong></span>.</li>
+<li>Click Pipeline &gt; Build.</li>
+<li>Click Pipeline Promote Changes &gt; Build.</li>
+</ul>
 <p><br></p>
               <hr>
               
