--- a/home/clone-environment-video.html
+++ b/home/clone-environment-video.html
@@ -80,12 +80,13 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p><html>
+<html>
  <body>
 <iframe src="https://www.youtube.com/embed/mTzfl_OYKVI" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
  </body>
 </html>
-<br></p>
+
+<p><br></p>
 <p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>3:35 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>15 minutes</strong> the cloning of the environment)</p>
