--- a/home/create-dev-env-video.html
+++ b/home/create-dev-env-video.html
@@ -82,9 +82,25 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/JScmql1mUaw" width="720" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe src="https://www.youtube.com/embed/JScmql1mUaw" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
  </body>
 </html>
+
+<p><br></p>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>8:50 minutes</strong>
+<br>
+<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>~ 15 minutes</strong> the creation of the environment)</p>
+<p><span style="color:#005294"><strong>INFO</strong></span>:
+<br></p>
+<ul>
+<li>Create a <span style="color:#005294"><strong>new environment</strong></span>.</li>
+<li>Change environment <span style="color:#005294"><strong>name and description</strong></span>.</li>
+<li>Check <span style="color:#005294"><strong>Monitor Application</strong></span> endpoint.</li>
+<li>Check <span style="color:#005294"><strong>Go to Application</strong></span> endpoint to open a T24 instance.</li>
+<li>Generate an <span style="color:#005294"><strong>SSH key</strong></span> and attach it to a <span style="color:#005294"><strong>user</strong></span> on the portal.</li>
+<li><span style="color:#005294"><strong>Clone</strong></span> a repository using Tortoise Git.</li>
+<li>Use available <span style="color:#005294"><strong>buttons/ functions</strong></span>: stop, rebuild, scale (up and down), export and delete.</li>
+</ul>
 <p><br></p>
               <hr>
               
