--- a/home/fcm-configuration-video.html
+++ b/home/fcm-configuration-video.html
@@ -82,11 +82,25 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/XBsmOZvg-z8" width="720" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe src="https://www.youtube.com/embed/XBsmOZvg-z8" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
  </body>
 </html>
 
 
+<p><br></p>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>8:47 minutes</strong>
+<br>
+<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 25 minutes</strong> (from which <strong>~ 15 minutes</strong> the creation of the environment)</p>
+<p><span style="color:#005294"><strong>INFO</strong></span>:
+<br></p>
+<ul>
+<li>Create <span style="color:#005294"><strong>new environment</strong></span> using <span style="color:#005294"><strong>FCM</strong></span> template.</li>
+<li>Check the <span style="color:#005294"><strong>endpoints</strong></span>: Financial Crime Mitigation and Interfaces Module.</li>
+<li>Create a <span style="color:#005294"><strong>user</strong></span> on the portal and attach the public <span style="color:#005294"><strong>SSH key</strong></span>.</li>
+<li><span style="color:#005294"><strong>Connect to SFTP</strong></span> server with WinSCP client.</li>
+<li><span style="color:#005294"><strong>Drag a message</strong></span> to be processed into the appropriate folder.</li>
+<li>Check <span style="color:#005294"><strong>Transaction Alert Manager</strong></span> from FCM application.</li>
+</ul>
 <p><br></p>
               <hr>
               
