--- a/home/temenos-cloud-templates.html
+++ b/home/temenos-cloud-templates.html
@@ -95,7 +95,7 @@
 <p>Templates are used by the provisioning service to create Sandbox environments with the desired configuration, as shown below:</p>
 <p><img src="images/sandbox-templates.png" alt=""></p>
 <p>By default, new Templates are added with each monthly release of T24. These Templates follow a standard pattern, configuration and technology stack, but with the most recent releases of T24 being deployed.</p>
-<div class="NOTE"><h5>Note</h5><p>To see what are the <strong>Azure Prices and Cost of Resources</strong>, please check <a href="https://azure.microsoft.com/en-gb/pricing/calculator/" target="_top"><u><strong>here</strong></u></a>.</p>
+<div class="NOTE"><h5>Note</h5><p>To see what are the <strong>Azure Prices and Cost of Resources</strong>, please check <a href="https://azure.microsoft.com/en-gb/pricing/calculator/" target="_blank"><u><strong>here</strong></u></a>.</p>
 </div>
 <p>However, the Temenos Development platform team also offer the ability to create customised Templates for clients. For more information, please contact <strong>CloudPlatformSupport@temenos.com</strong>.</p>
 <p>Furthermore, please find below the current templates catalogue. The standard configuration of each template can be explored by clicking the required template from the list.</p>
