--- a/home/toc.html
+++ b/home/toc.html
@@ -121,6 +121,9 @@
                     <a href="techguides/clone-environment.html" name="" title="Clone an Environment">Clone an Environment</a>
                   </li>
                   <li>
+                    <a href="techguides/export-import-database.html" name="" title="Export and Import a Database">Export and Import a Database</a>
+                  </li>
+                  <li>
                     <a href="techguides/access-ud-directories.html" name="" title="Access UD Directories">Access UD Directories</a>
                   </li>
                   <li>
